Use string template from java 21 preview